--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,13 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+#Projet de Test
+test/
+test.API/
+test2.WPF/
+Vousse.WPF/
+billetTest.WPF/
+Vousse.Service/ITestService.cs
+Vousse.Service/testService.cs
+Vousse.DTO/testBilleterie.cs
