#17 #26 Mise en place de l'environnement WPF
Ajout de FodyWeavers.xsd à .gitignore

Le fichier `FodyWeavers.xsd` a été ajouté à `.gitignore` pour éviter qu'il ne soit suivi par Git.
Le chemin `test/ test.API/ test2.WPF/-Vousse.WPF/` a été mis à jour pour inclure `+ Vousse.WPF/`, ce qui signifie que le répertoire `Vousse.WPF/` est désormais également ignoré.

--- a/.gitignore
+++ b/.gitignore
@@ -366,7 +366,7 @@ FodyWeavers.xsd
 test/
 test.API/
 test2.WPF/
-Vousse.WPF/
+# Vousse.WPF/
 billetTest.WPF/
 Vousse.Service/ITestService.cs
 Vousse.Service/testService.cs
