--- a/Vousse.API/appsetting.sample.json
+++ b/Vousse.API/appsetting.sample.json
@@ -7,6 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "Vousse": "Data Source=localhost;Initial Catalog=BDDprojetHabib;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+        "Vousse": ""
     }
 }
