#17 #27 Mise à jour des configurations et ajout de nouvelles méthodes
- Ajout de fichiers de configuration dans `.gitignore` pour Vousse.DAL, Vousse.API et Vousse.WPF.
- Nouvelle méthode `GetChevauchements` ajoutée dans `SpectaclesController.cs`.
- Modification de `appsettings.json` pour inclure des chaînes de connexion, avec suppresion de celle pour "Vousse".
- Mise à jour de `OnConfiguring` dans `VousseContext.cs` pour utiliser un fichier de configuration.
- Renommage de `DetecterChevauchements` en `GetChevauchements` dans `ISpectacleService.cs` et `SpectacleService.cs`.
- Ajout de nouveaux fichiers d'exemple de configuration avec des paramètres de journalisation.

--- a/.gitignore
+++ b/.gitignore
@@ -377,3 +377,6 @@ Vousse.DAL/appsettings.json
 Vousse.API/appsettings.json
 Vousse.API/appsettings.Development.json
 Vousse.WPF/appsettings.json
+/Vousse.WPF/appsettings.json
+/Vousse.API/appsettings.json
+/Vousse.DAL/appsettings.json
