#17 #27 Fin de la chaîne de gestion de chevauchements. Reste que le design et le problème de la barre de progression.

--- a/Vousse.DAL/appsettings .sample.json
+++ b/Vousse.DAL/appsettings .sample.json
@@ -4,4 +4,4 @@
     }
 }
 //Si le scaffold ne fonctionne pas avec cet appsettings, il faut mettre la chaîne de connexion dans onconfigure du fichier VousseContext.cs
-//et desactiver le voussecontext_suite
+//et desactiver le voussecontext_suite ☺️
